src/app/+observation/form/observation-form.component.scss
@import '../../../styles/variables';
@import 'vars';

.mode-select {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-between;

  border-bottom: 1px solid $neutral-4;
  > div {
    display: flex;
    flex-flow: row nowrap;
  }
  laji-observation-active {
    align-self: center;
  }
}

.mode-switch-btn {
  background: unset;
  border: unset;
  border-bottom: 3px solid rgba(0,0,0,0);
  color: $neutral-7;
  &:not(.active):hover {
    color: $primary-5;
  }
  &.active {
    border-bottom: 3px solid $primary-5;
    cursor: default;
  }
}

:host ::ng-deep laji-observation-active .open-select {
  border-bottom: 3px solid rgba(0,0,0,0)
}

.top-section {
  padding: 15px;
}

.laji-panel {
  background-color: $neutral-2;
  box-shadow: 0 1px 3px 0 $neutral-4;
  margin-bottom: 10px;
}

laji-select, laji-metadata-select {
  margin-bottom: 5px;
}

hr {
  margin: 4px 0;
}
#logCoordinateAccuracyMax:focus {
  border: none;
  box-shadow: none;
}
.result-list {
  display: flex;
  flex-direction: column;
}
.taxon-panel {
  background-color: #ffffff;
  margin: -15px;
  padding: 15px;
}
.lj-input-wrap {
  padding: 0 15px;
}
label {
  display: inline;
}

:host ::ng-deep p {
  font-size: small;
}
.switch-label {
  margin-left: 5px;
}
.small-label {
  font-weight: normal;
  font-size: smaller;
}

